--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
